jilles      2006/10/22 01:58:09 UTC	(20061022-6835)
  Log:
  contrib/cs_count: tweak description, add oper override
  

  Changes:	Modified:
  +14 -4	trunk/contrib/cs_count.c (File Modified) 


nenolod     2006/10/22 01:55:56 UTC	(20061022-6833)
  Log:
  - document the DTree system
  

  Changes:	Modified:
  +230 -3	trunk/src/dictionary.c (File Modified) 


nenolod     2006/10/22 01:20:25 UTC	(20061022-6831)
  Log:
  - document user_mode().
  

  Changes:	Modified:
  +18 -0	trunk/src/users.c (File Modified) 


nenolod     2006/10/22 00:40:48 UTC	(20061022-6829)
  Log:
  - remove strscpy().
  

  Changes:	Modified:
  +0 -1		trunk/libatheme/org.atheme.claro.base.string (File Modified) 
  +0 -12	trunk/libatheme/string.c (File Modified) 
  +1 -1		trunk/modules/saslserv/crypt.c (File Modified) 
  +1 -1		trunk/modules/saslserv/plain.c (File Modified) 


jilles      2006/10/22 00:29:50 UTC	(20061022-6827)
  Log:
  Move user_mode() from cmode.c to users.c.
  

  Changes:	Modified:
  +0 -1		trunk/include/channels.h (File Modified) 
  +1 -0		trunk/include/users.h (File Modified) 
  +0 -65	trunk/src/cmode.c (File Modified) 
  +65 -0	trunk/src/users.c (File Modified) 


jilles      2006/10/21 23:32:38 UTC	(20061021-6825)
  Log:
  Use fault_noprivs instead of fault_authfail in some
  cases where no password or other authentication token
  is involved.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/ghost.c (File Modified) 
  +2 -2		trunk/modules/nickserv/listchans.c (File Modified) 
  +1 -1		trunk/modules/nickserv/logout.c (File Modified) 
  +3 -3		trunk/modules/nickserv/set.c (File Modified) 


w00t        2006/10/21 22:43:43 UTC	(20061021-6823)
  Log:
  Fix a minor oops, thanks, jilles

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd11.c (File Modified) 


w00t        2006/10/21 22:30:12 UTC	(20061021-6821)
  Log:
  Simplified FJOIN processing and commented it.

  Changes:	Modified:
  +36 -7	trunk/protocol/inspircd11.c (File Modified) 

